namespace added to certificate urls

--- a/templates/base.html
+++ b/templates/base.html
@@ -100,7 +100,7 @@
                 <i class="fa fa-plus"></i> Recruitment
               </a>
               <a href='{% url "certificate:enter_id" %}' target="" class="dropdown-item">
-                <i class="fa fa-plus"></i> Certificates
+                <i class="fas fa-certificate"></i> Certificates
               </a>
             </div>
           </li>
