--- a/templates/certificate/certificate.html
+++ b/templates/certificate/certificate.html
@@ -6,12 +6,15 @@
 {% load static %}
 
 {% block cssfile %}
-<link rel="stylesheet" href="{% static 'css/certificate/style_certificate.css' %}">
+<link rel="stylesheet" href='{% static "css/certificate/style_certificate.css" %}'>
 {% endblock %}
+
 
 
 {% block title %}Certificates{% endblock %}
 </head>
+
+
 
 <!-- <body id="main"> -->
 
@@ -48,6 +51,26 @@
 
     <div class="container inner-container ">
         <div class="row second-inner">
+
+            <div class="col-lg-6">
+                <div class="success-container">
+                    <i class="far fa-check-circle">
+                        <h4 class="success">This certificate is verified</h4>
+                    </i>
+                </div>
+
+                <div class="image-container">
+                    <div class="main-container">
+                        <!-- <img src="images/Square.jpg" id="certificate-image" alt="certificate"> -->
+                        <img id="certificate-image" src="/media/{{certificate.image}}" alt="certificate">
+                    </div>
+                </div>
+            </div>
+            <br>
+            <br>
+            
+
+
             <div class="col-lg-6">
                 <form class="certificate-form" action method="POST">
                     {% csrf_token %}
@@ -58,33 +81,26 @@
                         <div class="card-header">
                             <!-- <img class="card-img" src="images/Square.jpg" alt="Card image"> -->
                             <img class="card-img" src="{% static 'img/certificate/Square.jpg' %}" alt="Card image">
+
                             <h4 class="card-title" id="card-title" style="color:#dadada">&nbsp;RoboQuiz 2.0</h4>
                         </div>
                         <div class="card-body">
                             <h4>Certificate ID</h4>
-                            <input type="text" name="url_key" id="certificate-id" class="form-control" placeholder="Enter Certificate-ID" value="" required>
+                            <input type="text" name="url_key" id="certificate-id" class="form-control"
+                                placeholder="Enter Certificate-ID" value="" required>
                         </div>
                         <div class="card-footer submit-section">
-                            <button type="submit" name="Submit" ID="submit" onclick="" class="btn btn-info btn-round btn-lg">Submit</button>&nbsp;
+                            <button type="submit" name="Submit" ID="submit" 
+                                class="btn btn-info btn-round btn-lg">Submit</button>&nbsp;
+
+                            &nbsp; &nbsp; <a style="color:white; text-decoration:none;" 
+                                download="certificate" href="/media/{{certificate.image}}"><button type="button"
+                                    class="btn btn-info btn-round btn-lg download" ID="submit">Download</button></a>
                         </div>
                     </div>
                 </form>
             </div>
-            <div class="col-lg-6">
-                
-                <div class="image-container">
-                    <div class="main-container">
-                        <!-- <img src="images/Square.jpg" id="certificate-image" alt="certificate"> -->
-                        <img src="/media/{{certificate.image}}" alt="">
-                    </div>
-                </div>
-                <br>
-                <div class="success-container">
-                    <i class="far fa-check-circle">
-                        <h4 class="success">This certificate is verified</h4>
-                    </i>
-                </div>
-            </div>
+            
         </div>
     </div>
 
@@ -97,11 +113,11 @@
             <div class="col-lg-12">
                 <form class="certificate-form single-block" action="" method="POST">
                     {% csrf_token %}
-                    
+
                     {% if request_obj %}
                     <h4 id="danger" class="text-danger">Invalid !!! Enter a valid ID.</h4>
                     {% endif %}
-                    
+
 
                     <div class="card card-register">
                         <div class="card-header">
@@ -111,10 +127,12 @@
                         </div>
                         <div class="card-body">
                             <h4>Certificate ID</h4>
-                            <input type="text" name="url_key" id="certificate-id" class="form-control" placeholder="Enter Certificate-ID" value="" required>
+                            <input type="text" name="url_key" id="certificate-id" class="form-control"
+                                placeholder="Enter Certificate-ID" value="" required>
                         </div>
                         <div class="card-footer submit-section">
-                            <button type="submit" name="Submit" ID="submit" onclick="" class="btn btn-info btn-round btn-lg">Submit</button>&nbsp;
+                            <button type="submit" name="Submit" ID="submit" 
+                                class="btn btn-info btn-round btn-lg">Submit</button>&nbsp;
                         </div>
                     </div>
                 </form>
@@ -123,7 +141,7 @@
     </div>
 
 
-    
+
 
     {% endif %}
 
@@ -132,11 +150,6 @@
 </div>
 
 {% endblock %}
-
-
-
-
-
 
 </body>
 
